# lamina

./: .gitignore  Cargo.toml
lamina-c/: Cargo.toml  build.rs
lamina-c/include/: lamina.h
lamina-c/scripts/: build-sdk.sh
lamina-c/src/: builder.rs  error.rs  jit.rs  lib.rs  module.rs  types.rs
lamina-codegen/: Cargo.toml
lamina-codegen/src/: regalloc.rs
lamina-codegen/src/wasm/: abi.rs
lamina-ir/: Cargo.toml
lamina-ir/src/: instruction.rs  module.rs  owned.rs  types.rs
lamina-ir/src/builder/: memory.rs  pointers.rs  simd.rs  tests.rs
lamina-mir/: Cargo.toml
lamina-mir/src/: module.rs
lamina-platform/: Cargo.toml
lamina-platform/src/: detection.rs  lib.rs  simd.rs
src/: error.rs  lib.rs  main.rs
src/cli/: jit.rs  options.rs
src/mir/codegen/: convert.rs
src/mir/transform/: branch_opt.rs  loop_opt.rs  peephole.rs  vectorization.rs
src/mir_codegen/: assemble.rs  common.rs  limits.rs  link.rs
src/mir_codegen/arx64/: mod.rs
src/mir_codegen/powerpc/powerpc64/: util.rs
src/mir_codegen/riscv/: util.rs
src/mir_codegen/wasm/: mod.rs
src/mir_codegen/x86_64/: util.rs
src/parser/: instructions.rs  mod.rs
src/runtime/: c_abi_dynamic.rs  compiler.rs  executor.rs  macro_helpers.rs  sandbox.rs
tests/: bench_2dmatmul.rs  bench_factorial.rs  bench_fibonacci.rs  bench_primegeneration.rs
tests/common/: mod.rs
